# zone.js

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  package.json  tsconfig.json  umd.bzl
lib/: BUILD.bazel  rollup.bzl  zone.ts
test/: BUILD.bazel  browser_build_test.ts  test.bzl
test/browser/: registerElement.spec.ts
test/common/: Error.spec.ts
