load("@npm_bazel_typescript//:defs.bzl", "ts_library")
load("@npm_bazel_karma//:index.bzl", "ts_web_test_suite")
load(":test.bzl", "get_web_test_deps")

ts_library(
    name = "test_lib",
    srcs = glob(["**/*.ts"]),
    deps = [
        "//lib",
        "@npm//@types",
        "@npm//rxjs",
    ],
)

web_test_deps = get_web_test_deps()

ts_web_test_suite(
    name = "test",
    srcs = [
        "@npm//node_modules/tslib:tslib.js",
    ],
    runtime_deps = web_test_deps,
    bootstrap = [
        "@npm//node_modules/core-js-bundle:index.js",
    ],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
    ],
    deps = [
        ":test_lib",
        "@npm//karma-jasmine",
    ]
)

