load("@npm_bazel_karma//:index.bzl", "ts_web_test_suite")
load("@npm_bazel_typescript//:defs.bzl", "ts_library")

ts_library(
  name = "test_lib",
  deps = [
    "//lib",
    "@npm//@types",
    "@npm//rxjs",
  ],
  srcs = glob([
    "**/*.spec.ts",
    "browser_entry_point.ts",
    "browser-zone-setup.ts",
    "common_tests.ts",
    "test-env-setup-jasmin.ts",
    "test-env-setup-mocha.ts",
    "test-util.ts",
    "rxjs/rxjs.util.ts",
    "wtf_mock.ts",
  ])
)

ts_library(
  name = "init_test_browser",
  deps = [
    ":test_lib",
    "@npm//@types",
    "@npm//rxjs",
  ],
  srcs = [
    "browser_build_test.ts",
  ]
)

ts_web_test_suite(
  name = "test",
  deps = [
    "@npm//karma-jasmine",
  ],
  srcs = [        
    "@npm//node_modules/tslib:tslib.js",
  ],
  runtime_deps = [
    "//lib:browser_rollup",
  ],
  browsers = [
    "@io_bazel_rules_webtesting//browsers:chromium-local",
  ]
)
